# SuGaR

./: .gitignore  README.md  environment.yml  extract_mesh.py  extract_refined_mesh_with_texture.py  metrics.py  run_viewer.py  train.py  train_coarse_density.py  train_coarse_sdf.py  train_refined.py  view_sugar_results.ipynb
gaussian_splatting/SIBR_viewers/: .gitignore  CMakeLists.txt  LICENSE.md  README.md
gaussian_splatting/SIBR_viewers/cmake/linux/: cmake_policies.cmake  dependencies.cmake  git_describe.cmake  install_runtime.cmake  parse_arguments_multi.cmake  sibr_library.cmake
gaussian_splatting/SIBR_viewers/cmake/linux/Modules/: FindASSIMP.cmake  FindEGL.cmake  FindEmbree.cmake  FindFFMPEG.cmake  FindGLFW.cmake
gaussian_splatting/SIBR_viewers/cmake/windows/: MSVCsetUserCommand.cmake  Win3rdParty.cmake  dependencies.cmake  downloadAndExtractZipFile.cmake  include_once.cmake  install_runtime.cmake  sibr_library.cmake
gaussian_splatting/SIBR_viewers/cmake/windows/Modules/: FindASSIMP.cmake  FindEmbree.cmake  FindFFmpeg.cmake
gaussian_splatting/SIBR_viewers/docs/: CMakeLists.txt  doxyfile.in  doxygen_prebuild.cmake.in  layout.xml.in
gaussian_splatting/SIBR_viewers/docs/pages/: 1_Getting_Started.dox  2_Projects.dox  2_Projects.dox.in  3_Tutorials.dox  4_Architecture.dox
gaussian_splatting/SIBR_viewers/docs/pages/Tutorials/: How_to_generate_your_dataset.dox  How_to_setup_your_own_project.dox  Paths_and_cameras.dox  Useful_sibr_elements.dox
gaussian_splatting/SIBR_viewers/src/: CMakeLists.txt
gaussian_splatting/SIBR_viewers/src/core/assets/: ActiveImageFile.cpp  ActiveImageFile.hpp  CMakeLists.txt  CameraRecorder.cpp  CameraRecorder.hpp  Config.hpp  IFileLoader.hpp  ImageListFile.cpp  ImageListFile.hpp  InputCamera.cpp  InputCamera.hpp  Resources.cpp  Resources.hpp  UVUnwrapper.cpp  UVUnwrapper.hpp  colmapheader.h  sibr_assets.dox
gaussian_splatting/SIBR_viewers/src/core/graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  Config.hpp  Frustum.cpp  Frustum.hpp  GPUQuery.cpp  GPUQuery.hpp  GUI.cpp  GUI.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  MaterialMesh.cpp  MaterialMesh.hpp  Mesh.cpp  Mesh.hpp  MeshBufferGL.cpp  MeshBufferGL.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderUtility.cpp  RenderUtility.hpp  Shader.cpp  Shader.hpp  Shader.inl  Texture.cpp  Texture.hpp  Types.hpp  Utils.cpp  Utils.hpp  Viewport.cpp  Viewport.hpp  Window.cpp  Window.hpp  sibr_graphics.dox
gaussian_splatting/SIBR_viewers/src/core/imgproc/: CMakeLists.txt  Config.hpp  CropScaleImageUtility.cpp  CropScaleImageUtility.hpp  DistordCropUtility.cpp  DistordCropUtility.hpp  MRFSolver.cpp  MRFSolver.h  MeshTexturing.cpp  MeshTexturing.hpp  PoissonReconstruction.cpp  PoissonReconstruction.hpp  sibr_imgproc.dox
gaussian_splatting/SIBR_viewers/src/core/raycaster/: CMakeLists.txt  CameraRaycaster.cpp  CameraRaycaster.hpp  Config.hpp  Intersector2D.cpp  Intersector2D.h  KdTree.hpp  PlaneEstimator.cpp  PlaneEstimator.hpp  Ray.cpp  Ray.hpp  Raycaster.cpp  Raycaster.hpp  VoxelGrid.cpp  VoxelGrid.hpp  sibr_raycaster.dox
gaussian_splatting/SIBR_viewers/src/core/renderer/: AddShadowRenderer.cpp  AddShadowRenderer.hpp  BinaryMeshRenderer.cpp  BinaryMeshRenderer.hpp  BlurRenderer.cpp  BlurRenderer.hpp  CMakeLists.txt  ColoredMeshRenderer.cpp  ColoredMeshRenderer.hpp  Config.hpp  CopyRenderer.cpp  CopyRenderer.hpp  DepthRenderer.cpp  DepthRenderer.hpp  NormalRenderer.cpp  NormalRenderer.hpp  PointBasedRenderer.cpp  PointBasedRenderer.hpp  PoissonRenderer.cpp  PoissonRenderer.hpp  PositionRender.cpp  PositionRender.hpp  RenderMaskHolder.cpp  RenderMaskHolder.hpp  ShadowMapRenderer.cpp  ShadowMapRenderer.hpp  TexturedMeshRenderer.cpp  TexturedMeshRenderer.hpp  sibr_renderer.dox
gaussian_splatting/SIBR_viewers/src/core/scene/: BasicIBRScene.cpp  BasicIBRScene.hpp  CMakeLists.txt  CalibratedCameras.cpp  CalibratedCameras.hpp  Config.hpp  ICalibratedCameras.hpp  IIBRScene.hpp  IInputImages.hpp  IParseData.hpp  IProxyMesh.hpp  InputImages.cpp  InputImages.hpp  ParseData.cpp  ParseData.hpp  ProxyMesh.cpp  ProxyMesh.hpp  RenderTargetTextures.cpp  RenderTargetTextures.hpp  sibr_scene.dox
gaussian_splatting/SIBR_viewers/src/core/system/: Array2d.hpp  ByteStream.cpp  ByteStream.hpp  CMakeLists.txt  CommandLineArgs.cpp  CommandLineArgs.hpp  Config.cpp  Config.hpp  LoadingProgress.cpp  LoadingProgress.hpp  MD5.h  Matrix.cpp  Matrix.hpp  MatrixBasePlugin.hpp  MatrixPlugin.hpp  Quaternion.cpp  Quaternion.hpp  Rect.hpp  SimpleTimer.hpp  String.cpp  String.hpp  ThreadIdWorker.cpp  ThreadIdWorker.hpp  Transform3.hpp  Utils.cpp  Utils.hpp  Vector.cpp  Vector.hpp  VectorUtils.cpp  VectorUtils.hpp  XMLTree.cpp  XMLTree.h  sibr_system.dox
gaussian_splatting/SIBR_viewers/src/core/video/: CMakeLists.txt  Config.hpp  FFmpegVideoEncoder.cpp  FFmpegVideoEncoder.hpp  MultipleVideoDecoder.hpp  Video.cpp  Video.hpp  VideoUtils.cpp  VideoUtils.hpp  sibr_video.dox
gaussian_splatting/SIBR_viewers/src/core/view/: CMakeLists.txt  Config.hpp  DatasetView.cpp  DatasetView.hpp  FPSCamera.cpp  FPSCamera.hpp  FPSCounter.cpp  FPSCounter.hpp  IBRBasicUtils.cpp  IBRBasicUtils.hpp  ICameraHandler.cpp  ICameraHandler.hpp  ImageView.cpp  ImageView.hpp  ImagesGrid.cpp  ImagesGrid.hpp  InteractiveCameraHandler.cpp  InteractiveCameraHandler.hpp  MultiMeshManager.cpp  MultiMeshManager.hpp  MultiViewManager.cpp  MultiViewManager.hpp  Orbit.cpp  Orbit.hpp  RenderingMode.cpp  RenderingMode.hpp  SceneDebugView.cpp  SceneDebugView.hpp  Skybox.cpp  Skybox.hpp  TrackBall.cpp  TrackBall.h  UIShortcuts.cpp  UIShortcuts.hpp  ViewBase.cpp  ViewBase.hpp  sibr_view.dox
gaussian_splatting/submodules/diff-gaussian-rasterization/: .gitignore  .gitmodules  CMakeLists.txt  README.md  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
gaussian_splatting/submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
gaussian_splatting/submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
(+255 files in other folders)
